[Chore] Fix x-axis scrollbar

--- a/themes/hugo-html5up-alpha/assets/sass/main.scss
+++ b/themes/hugo-html5up-alpha/assets/sass/main.scss
@@ -121,6 +121,7 @@ $bannerURL: "{{ (.Site.Data.homepage.banner.image | default "images/banner.jpg")
 	// Based on css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice
 		html {
 			box-sizing: border-box;
+			overflow-x: hidden;
 		}
 
 		*, *:before, *:after {
